--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
           <ul>
             <li><a href="#">Find us</a></li>
             <li><a href="#">Talk to us</a></li>
-            <li><a href="#">Markets</a></li>
+            <li><a href="#">Blogs</a></li>
             <li><a href="#">Projects</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Territories</a></li>
           </ul>
       </nav>
                             CopyRights @2020
